# kcmutils

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5KCMUtilsConfig.cmake.in  KF5KCMUtilsMacros.cmake  KF6KCMUtilsConfig.cmake.in  KF6KCMUtilsMacros.cmake  README.md  metainfo.yaml
autotests/: CMakeLists.txt  YaST-systemsettings.desktop  kcmloadtest.cpp  kcmoduleinfotest.cpp  kcmultidialogtest.cpp  kplugininfotest.cpp
autotests/desktopfilekcm/: CMakeLists.txt  kcmtest.cpp  kcmtest.h  kcmtest.json
autotests/fakekcm/: CMakeLists.txt  fakekcm.cpp  fakekcm.json
autotests/jsonplugin/: CMakeLists.txt  jsonplugin.cpp  jsonplugin.desktop  jsonplugin.json
autotests/module_data_codegen/: CMakeLists.txt  module_data_test.cpp
autotests/qmlkcm/: CMakeLists.txt  kcm.cpp  kcm_testqml2.json  kcm_time.json  timesettings.cpp  timesettings.h
autotests/qmlkcm/package/contents/ui/: main.qml
autotests/qmlkcm/ui/: main.qml
docs/: Doxyfile.local
po/af/: kcmutils5.po  kcmutils6.po
po/ar/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/as/: kcmutils5.po  kcmutils6.po
po/ast/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/az/: kcmutils5.po  kcmutils6.po
po/be/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/be@latin/: kcmutils5.po  kcmutils6.po
po/bg/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/bn/: kcmutils5.po  kcmutils6.po
po/bn_IN/: kcmutils5.po  kcmutils6.po
po/br/: kcmutils5.po  kcmutils6.po
po/bs/: kcmutils5.po  kcmutils6.po
po/ca/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/ca@valencia/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/crh/: kcmutils5.po  kcmutils6.po
po/cs/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/csb/: kcmutils5.po  kcmutils6.po
po/cy/: kcmutils5.po  kcmutils6.po
po/da/: kcmutils5.po  kcmutils6.po
po/de/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/el/: kcmutils5.po  kcmutils6.po
po/en_GB/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/eo/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/es/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/et/: kcmutils5.po  kcmutils6.po
po/eu/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/fa/: kcmutils5.po  kcmutils6.po
po/fi/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/fr/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/fy/: kcmutils5.po  kcmutils6.po
po/ga/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/gd/: kcmutils5.po  kcmutils6.po
po/gl/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/gu/: kcmutils5.po  kcmutils6.po
po/ha/: kcmutils5.po  kcmutils6.po
po/he/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/hi/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/hne/: kcmutils5.po  kcmutils6.po
po/hr/: kcmutils5.po  kcmutils6.po
po/hsb/: kcmutils5.po  kcmutils6.po
po/hu/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/hy/: kcmutils5.po  kcmutils6.po
po/ia/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/id/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/is/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/it/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/ja/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/ka/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/kk/: kcmutils5.po  kcmutils6.po
po/km/: kcmutils5.po  kcmutils6.po
po/kn/: kcmutils5.po  kcmutils6.po
po/ko/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/ku/: kcmutils5.po  kcmutils6.po
po/lb/: kcmutils5.po  kcmutils6.po
po/lt/: kcmshell6.po  kcmutils5.po  kcmutils6.po
po/lv/: kcmshell6.po  kcmutils5.po  kcmutils6.po
src/: CMakeLists.txt  KCMUtilsGenerateModuleData.cmake  Messages.sh  kcmodule.cpp  kcmodule.desktop  kcmodule.h  kcmodulecontainer.cpp  kcmodulecontainer.h  kcmoduledata.cpp  kcmoduledata.h  kcmoduleinfo.cpp  kcmoduleinfo.h  kcmoduleinit.desktop  kcmoduleloader.cpp  kcmoduleloader.h  kcmoduleproxy.cpp  kcmoduleproxy.h  kcmoduleproxy_p.h  kcmoduleqml.cpp  kcmoduleqml.h  kcmoduleqml_p.h  kcmultidialog.cpp  kcmultidialog.h  kcmultidialog_p.h  kcmutils-index.qdoc  kcmutils.qdoc  kcmutils.qdocconf  kcmutilsgeneratemoduledata.cpp.in  kcmutilsgeneratemoduledata.h.in  kpluginmodel.cpp  kpluginmodel.h  kpluginselector.cpp  kpluginselector.h  kpluginselector_p.h  kpluginwidget.cpp  kpluginwidget.h  kpluginwidget_p.h  ksettingswidgetadaptor.cpp  ksettingswidgetadaptor.h
src/core/: CMakeLists.txt  kabstractconfigmodule.cpp  kabstractconfigmodule.h  kcmoduledata.cpp  kcmoduledata.h  kcmutilscore.qdoc  kcmutilscore.qdocconf  kpluginmodel.cpp  kpluginmodel.h  kpluginmodel_p.h  kpluginproxymodel.cpp  kpluginproxymodel.h
src/kcmshell/: CMakeLists.txt  main.cpp  main.h
src/ksettings/: README.dox  componentsdialog.cpp  componentsdialog_p.h  dialog.cpp  dialog.h  dialog_p.h  dispatcher.cpp  dispatcher.h  dispatcher_p.h  pluginpage.cpp  pluginpage.h
src/qml/: CMakeLists.txt  configmodule.cpp  configmodule.h  kcmlauncher.cpp  kcmlauncher_p.h  kcmoduleloaderqml.cpp  kcmoduleloaderqml.h  kcmshell.cpp  kcmshell.h  kcmutilsqml.qdoc  kcmutilsqml.qdocconf  kquickconfigmodule.cpp  kquickconfigmodule.h  kquickconfigmoduleloader.cpp  kquickconfigmoduleloader.h  kquickmanagedconfigmodule.cpp  kquickmanagedconfigmodule.h  managedconfigmodule.h  qmldir  qmlplugin.cpp  settinghighlighterprivate.cpp  settinghighlighterprivate.h  settingstateproxy.h  sharedqmlengine.cpp  sharedqmlengine_p.h
src/qml/components/: AbstractKCM.qml  ContextualHelpButton.qml  DefaultIndicator.qml  GridDelegate.qml  GridView.qml  GridViewKCM.qml  KPluginDelegate.qml  KPluginSelector.qml  PluginDelegate.qml  PluginSelector.qml  ScrollView.qml  ScrollViewKCM.qml  SettingHighlighter.qml  SettingStateBinding.qml  SimpleKCM.qml
src/qml/components/private/: AboutPlugin.qml  GridDelegateMenu.qml  GridViewInternal.qml  KPluginDelegate.qml
src/quick/: CMakeLists.txt  kcmutilsquick.qdoc  kcmutilsquick.qdocconf  kquickconfigmodule.cpp  kquickconfigmodule.h  kquickconfigmoduleloader.cpp  kquickconfigmoduleloader.h  kquickmanagedconfigmodule.cpp  kquickmanagedconfigmodule.h  sharedqmlengine.cpp  sharedqmlengine_p.h
tools/: CMakeLists.txt  kcmmetadatagenerator.cpp
tools/kcmshell/: CMakeLists.txt  Messages.sh  main.cpp
(+109 files in other folders)
